hphp/hack/test/typecheck/pending_if10.php.exp
File "pending_if10.php", line 7, characters 10-11:
Variable $x is undefined, or there exists at least one control flow path reaching this point which does not define $x. (Naming[2050])
